--- a/meta/main.yml
+++ b/meta/main.yml
@@ -10,12 +10,13 @@ galaxy_info:
   platforms:
   - name: Ubuntu
     versions:
-      - all
+      - trusty
+      - xenial
+      - bionic
 
   galaxy_tags:
     - splunk
     - logs
     - search
 
-  dependencies:
-    - pyOpenSSL
+dependencies: []
