--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -3,6 +3,7 @@
 splunk_version: 7.1.3
 splunk_build: 51d9cac7b837
 splunk_deb_url: "https://download.splunk.com/products/splunk/releases/{{splunk_version}}/linux/splunk-{{splunk_version}}-{{splunk_build}}-linux-2.6-amd64.deb"
+splunk_rpm_url: "https://download.splunk.com/products/splunk/releases/{{splunk_version}}/linux/splunk-{{splunk_version}}-{{splunk_build}}-linux-2.6-x86_64.rpm"
 
 # Splunk service options
 splunk_home: '/opt/splunk'
